--- a/templete/header-menu.html
+++ b/templete/header-menu.html
@@ -24,7 +24,7 @@
             	<li><a href="login.html">登入</a></li>
             	<li><a href="regist.html">加入兵團</a></li>
             	<li><a href="about.html" class="nav-info">兵團計畫說明</a></li>
-                <li><a href="http://shop.cic.tw/" class="nav-donate">贊助<br>兵團</a></li>
+                <li><a href="http://shop.cic.tw/" class="nav-donate" target="_blank">贊助<br>兵團</a></li>
             </ul>
           </nav>
         </div>
