--- a/templete/legislators-analysis.html
+++ b/templete/legislators-analysis.html
@@ -16,9 +16,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <link href="css/popup.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link href="css/party-tag.css" rel="stylesheet" type="text/css">
-<link href="css/style-fix.css" rel="stylesheet" type="text/css">
+<link href="css/style-new.css" rel="stylesheet" type="text/css">
+    <link href="css/party-tag-new.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -92,9 +91,11 @@
               <div class="data-src">原始數據來源：<a href="http://www.ccw.org.tw/" target="_blank">公民監督國會聯盟</a></div>
             </header>
           </div>
-          <!--fb讚分享按鈕放這，這是範例，實際套用需要改寫-->
-          <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=80&amp;appId=800444723368838" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:30px;" allowTransparency="true"></iframe>
-          <!--fb讚分享按鈕end-->
+          <!--fb讚分享按鈕放這-->
+            <div class="fb-share">
+            （示意：這塊放fb分享按鈕的code)
+            </div>
+            <!--fb讚分享按鈕end-->
           <div class="inner-content-txt">
             <div class="analysis-sblock">
               <h4>出席統計</h4>
