--- a/templete/legislators-api-dead.html
+++ b/templete/legislators-api-dead.html
@@ -16,9 +16,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <link href="css/popup.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link href="css/party-tag.css" rel="stylesheet" type="text/css">
-<link href="css/style-fix.css" rel="stylesheet" type="text/css">
+<link href="css/style-new.css" rel="stylesheet" type="text/css">
+    <link href="css/party-tag-new.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -93,9 +92,11 @@
       </div>
                 <div class="data-src">資料來源：<a href="#">立委投票指南</a></div></header>
           </div>
-          <!--fb讚分享按鈕放這，這是範例，實際套用需要改寫-->
-          <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=80&amp;appId=800444723368838" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:30px;" allowTransparency="true"></iframe>
-          <!--fb讚分享按鈕end-->
+          <!--fb讚分享按鈕放這-->
+            <div class="fb-share">
+            （示意：這塊放fb分享按鈕的code)
+            </div>
+            <!--fb讚分享按鈕end-->
           <div class="inner-content-txt">
             <div class="api-dead-block">唉呀！目前從立委投票指南抓取資料失敗，如果想要瀏覽相關資料請直接至立委投票指南查看。<br>
 <a href="#">馬上來去看看</a>
