多顯示關鍵字的欄位
多顯示關鍵字的欄位

--- a/templete/admin/talk-list.html
+++ b/templete/admin/talk-list.html
@@ -35,14 +35,16 @@
             	  <table width="100%" class="adm-table">
             	    <tr>
             	      <th width="5%"><input type="checkbox" name="checkbox" id="checkbox"></th>
-            	      <th width="54%">質詢標題</th>
-            	      <th width="11%">立委姓名</th>
-            	      <th width="10%">回報時間</th>
-            	      <th width="13%">回報者 / ip</th>
-            	      <th width="7%">查看</th>
+            	      <th width="11%">關鍵字</th>
+            	      <th width="42%">質詢標題</th>
+            	      <th width="5%">立委姓名</th>
+            	      <th width="13%">回報時間</th>
+            	      <th width="19%">回報者 / ip</th>
+            	      <th width="5%">查看</th>
            	        </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox2" id="checkbox2"></td>
+            	      <td>國防,外交,歷史</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10<br>
@@ -53,6 +55,7 @@
            	        </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
+            	      <td>國防</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -63,36 +66,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
-            	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
-            	      <td>尤美女</td>
-            	      <td>2014-10-10 <br>
-           	          24:00:00</td>
-            	      <td class="c">阿皮皮皮<br>
-66.249.67.39</td>
-            	      <td class="c"><a href="../people-single-talk-single.html" target="_blank">查看</a></td>
-          	      </tr>
-            	    <tr>
-            	      <td><input type="checkbox" name="checkbox2" id="checkbox2"></td>
-            	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
-            	      <td>尤美女</td>
-            	      <td>2014-10-10 <br>
-           	          24:00:00</td>
-            	      <td class="c">阿皮皮皮<br>
-66.249.67.39</td>
-            	      <td class="c"><a href="../people-single-talk-single.html" target="_blank">查看</a></td>
-          	      </tr>
-            	    <tr>
-            	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
-            	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
-            	      <td>尤美女</td>
-            	      <td>2014-10-10 <br>
-           	          24:00:00</td>
-            	      <td class="c">阿皮皮皮<br>
-66.249.67.39</td>
-            	      <td class="c"><a href="../people-single-talk-single.html" target="_blank">查看</a></td>
-          	      </tr>
-            	    <tr>
-            	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
+            	      <td>文化</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -103,6 +77,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox2" id="checkbox2"></td>
+            	      <td>教育,高中</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -113,6 +88,40 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
+            	      <td>國防,外交,歷史</td>
+            	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
+            	      <td>尤美女</td>
+            	      <td>2014-10-10 <br>
+           	          24:00:00</td>
+            	      <td class="c">阿皮皮皮<br>
+66.249.67.39</td>
+            	      <td class="c"><a href="../people-single-talk-single.html" target="_blank">查看</a></td>
+          	      </tr>
+            	    <tr>
+            	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
+            	      <td>國防</td>
+            	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
+            	      <td>尤美女</td>
+            	      <td>2014-10-10 <br>
+           	          24:00:00</td>
+            	      <td class="c">阿皮皮皮<br>
+66.249.67.39</td>
+            	      <td class="c"><a href="../people-single-talk-single.html" target="_blank">查看</a></td>
+          	      </tr>
+            	    <tr>
+            	      <td><input type="checkbox" name="checkbox2" id="checkbox2"></td>
+            	      <td>文化</td>
+            	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
+            	      <td>尤美女</td>
+            	      <td>2014-10-10 <br>
+           	          24:00:00</td>
+            	      <td class="c">阿皮皮皮<br>
+66.249.67.39</td>
+            	      <td class="c"><a href="../people-single-talk-single.html" target="_blank">查看</a></td>
+          	      </tr>
+            	    <tr>
+            	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
+            	      <td>教育,高中</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -123,6 +132,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
+            	      <td>國防,外交,歷史</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -133,6 +143,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox2" id="checkbox2"></td>
+            	      <td>國防</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -143,6 +154,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
+            	      <td>文化</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -153,6 +165,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
+            	      <td>教育,高中</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -163,6 +176,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox2" id="checkbox2"></td>
+            	      <td>國防,外交,歷史</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -173,6 +187,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
+            	      <td>國防</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -183,6 +198,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
+            	      <td>文化</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -193,6 +209,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox2" id="checkbox2"></td>
+            	      <td>教育,高中</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -203,6 +220,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
+            	      <td>國防,外交,歷史</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -213,6 +231,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
+            	      <td>國防</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -223,6 +242,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox3" id="checkbox3"></td>
+            	      <td>文化</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
@@ -233,6 +253,7 @@
           	      </tr>
             	    <tr>
             	      <td><input type="checkbox" name="checkbox4" id="checkbox4"></td>
+            	      <td>教育,高中</td>
             	      <td>鄭天財Sra.Kacaw 第8屆第6會期 內政委員會 2014-3-13</td>
             	      <td>尤美女</td>
             	      <td>2014-10-10 <br>
