--- a/templete/index.html
+++ b/templete/index.html
@@ -27,12 +27,14 @@
           <li><a href="login.html">登入</a></li>
           <li><a href="regist.html">加入兵團</a></li>
           <li><a href="about.html">兵團計畫說明</a></li>
+          <li><a class="nav-donate" target="_blank" href="http://shop.cic.tw/">贊助兵團</a></li>
         </ul>
       </nav>
     </div>
     <div id="main-wrap">
       <div id="index-banner">
-        <div id="active-btn"> <a href="post.html">回報立委紀錄</a> <a href="people-list.html">馬上找立委</a> </div>
+        <div id="active-btn"> <h3>立委當心<span>公民正在看著你</span></h3>
+          <a href="post.html">回報立委紀錄</a> <a href="people-list.html">看立委說什麼</a> </div>
       </div>
       <div id="index-video-block">
         <h3 class="index-b-title">最新影片回報</h3>
